# FastAPI

./: pyproject.toml
src/: schemas.py
src/database/: models.py
src/repository/: contacts.py
src/routes/: contacts.py
templates/: index.html
