[tool.poetry]
name = "hw-11"
version = "0.1.0"
description = ""
authors = ["Mephod1y <mephodiy@i.ua>"]
readme = "README.md"
packages = [{include = "hw_11"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
sqlalchemy = "^2.0.9"
psycopg2 = "^2.9.6"
jinja2 = "^3.1.2"
pydantic = {extras = ["email"], version = "^1.10.7"}
alembic = "^1.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
